# python-ai-utils

./: README.md  main.py  pyproject.toml
ai_utils/: __init__.py  client.py  logging.py  rate_limit.py
ai_utils/decorators/: __init__.py  retry.py  timeout.py  timing.py
examples/: basic_usage.py  decorators_standalone.py  structured_logging.py  with_rate_limiting.py  with_retries.py
